added 3D training and test classification

--- a/UMAP-on-training-data-2D.ipynb
+++ b/UMAP-on-training-data-2D.ipynb
@@ -288,6 +288,9 @@
    ],
    "source": [
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn import svm, metrics\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(embedding,target,stratify=target,random_state=42)\n",
     "\n",
     "# Create a classifier\n",
@@ -363,14 +366,12 @@
    "source": [
     "print(__doc__)\n",
     "\n",
-    "from sklearn import svm, metrics\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "sns.set(style='white', context='notebook', rc={'figure.figsize':(80,60)})\n",
     "\n",
-    "rnd = random.sample([ind for ind in range(len(predicted_selection))],k=8)\n",
-    "predicted_images = list([zip(data_selection, predicted_selection)[ind] for ind in rnd])\n",
     "num_of_examples = 8\n",
-    "for index, (image, label) in enumerate(predicted_images[:8]):\n",
+    "rnd = random.sample([ind for ind in range(len(predicted_selection))],k=num_of_examples)\n",
+    "predicted_images = list([zip(data_selection, predicted_selection)[ind] for ind in rnd])\n",
+    "for index, (image, label) in enumerate(predicted_images):\n",
     "    plt.subplot(2, num_of_examples, index + 1)\n",
     "    plt.axis('off')\n",
     "    plt.imshow(image.reshape((Mwidths,Mheights)), cmap=plt.cm.gray_r, interpolation='nearest')\n",
@@ -378,7 +379,7 @@
     "    \n",
     "\n",
     "test_images_and_labels = list([zip(data_selection, y_test_selection)[ind] for ind in rnd])\n",
-    "for index, (image, label) in enumerate(test_images_and_labels[:8]):\n",
+    "for index, (image, label) in enumerate(test_images_and_labels):\n",
     "    plt.subplot(2, num_of_examples, index + 1 + num_of_examples)\n",
     "    plt.axis('off')\n",
     "    plt.imshow(image.reshape((Mwidths,Mheights)), cmap=plt.cm.gray_r, interpolation='nearest')\n",
